--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 local.properties
 /app/src/main/java/info/meysam/unikie/
 /app/src/test/java/info/meysam/unikie/
+/app/src/test/java/info/meysam/unikie/
